src/snapshots/bminor__lexer__test__array-2.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        lexeme: "a",
        line: 0,
    },
    Token {
        kind: Colon,
        lexeme: ":",
        line: 0,
    },
    Token {
        kind: Array,
        lexeme: "array",
        line: 0,
    },
    Token {
        kind: LeftBracket,
        lexeme: "[",
        line: 0,
    },
    Token {
        kind: IntegerLiteral,
        lexeme: "5",
        line: 0,
    },
    Token {
        kind: RightBracket,
        lexeme: "]",
        line: 0,
    },
    Token {
        kind: Integer,
        lexeme: "integer",
        line: 0,
    },
    Token {
        kind: Equal,
        lexeme: "=",
        line: 0,
    },
    Token {
        kind: LeftBrace,
        lexeme: "{",
        line: 0,
    },
    Token {
        kind: IntegerLiteral,
        lexeme: "1",
        line: 0,
    },
    Token {
        kind: Comma,
        lexeme: ",",
        line: 0,
    },
    Token {
        kind: IntegerLiteral,
        lexeme: "2",
        line: 0,
    },
    Token {
        kind: Comma,
        lexeme: ",",
        line: 0,
    },
    Token {
        kind: IntegerLiteral,
        lexeme: "3",
        line: 0,
    },
    Token {
        kind: Comma,
        lexeme: ",",
        line: 0,
    },
    Token {
        kind: IntegerLiteral,
        lexeme: "4",
        line: 0,
    },
    Token {
        kind: Comma,
        lexeme: ",",
        line: 0,
    },
    Token {
        kind: IntegerLiteral,
        lexeme: "5",
        line: 0,
    },
    Token {
        kind: RightBrace,
        lexeme: "}",
        line: 0,
    },
    Token {
        kind: Semicolon,
        lexeme: ";",
        line: 0,
    },
    Token {
        kind: EOF,
        lexeme: "",
        line: 0,
    },
]
