src/snapshots/bminor__lexer__test__array-3.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        lexeme: "months",
        line: 0,
    },
    Token {
        kind: Colon,
        lexeme: ":",
        line: 0,
    },
    Token {
        kind: Array,
        lexeme: "array",
        line: 0,
    },
    Token {
        kind: LeftBracket,
        lexeme: "[",
        line: 0,
    },
    Token {
        kind: IntegerLiteral,
        lexeme: "3",
        line: 0,
    },
    Token {
        kind: RightBracket,
        lexeme: "]",
        line: 0,
    },
    Token {
        kind: String,
        lexeme: "string",
        line: 0,
    },
    Token {
        kind: Equal,
        lexeme: "=",
        line: 0,
    },
    Token {
        kind: LeftBrace,
        lexeme: "{",
        line: 0,
    },
    Token {
        kind: StringLiteral,
        lexeme: "\"January\"",
        line: 0,
    },
    Token {
        kind: Comma,
        lexeme: ",",
        line: 0,
    },
    Token {
        kind: StringLiteral,
        lexeme: "\"February\"",
        line: 0,
    },
    Token {
        kind: Comma,
        lexeme: ",",
        line: 0,
    },
    Token {
        kind: StringLiteral,
        lexeme: "\"March\"",
        line: 0,
    },
    Token {
        kind: RightBrace,
        lexeme: "}",
        line: 0,
    },
    Token {
        kind: Semicolon,
        lexeme: ";",
        line: 0,
    },
    Token {
        kind: EOF,
        lexeme: "",
        line: 0,
    },
]
