src/snapshots/bminor__lexer__test__array.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        lexeme: "a",
        line: 0,
    },
    Token {
        kind: Colon,
        lexeme: ":",
        line: 0,
    },
    Token {
        kind: Array,
        lexeme: "array",
        line: 0,
    },
    Token {
        kind: LeftBracket,
        lexeme: "[",
        line: 0,
    },
    Token {
        kind: IntegerLiteral,
        lexeme: "5",
        line: 0,
    },
    Token {
        kind: RightBracket,
        lexeme: "]",
        line: 0,
    },
    Token {
        kind: Integer,
        lexeme: "integer",
        line: 0,
    },
    Token {
        kind: Semicolon,
        lexeme: ";",
        line: 0,
    },
    Token {
        kind: EOF,
        lexeme: "",
        line: 0,
    },
]
