src/snapshots/bminor__lexer__test__boolean_literal.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        lexeme: "bool",
        line: 0,
    },
    Token {
        kind: Colon,
        lexeme: ":",
        line: 0,
    },
    Token {
        kind: Boolean,
        lexeme: "boolean",
        line: 0,
    },
    Token {
        kind: Equal,
        lexeme: "=",
        line: 0,
    },
    Token {
        kind: True,
        lexeme: "true",
        line: 0,
    },
    Token {
        kind: Semicolon,
        lexeme: ";",
        line: 0,
    },
    Token {
        kind: EOF,
        lexeme: "",
        line: 0,
    },
]
