src/snapshots/bminor__lexer__test__char_literal-3.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        lexeme: "ch",
        line: 0,
    },
    Token {
        kind: Colon,
        lexeme: ":",
        line: 0,
    },
    Token {
        kind: Char,
        lexeme: "char",
        line: 0,
    },
    Token {
        kind: Equal,
        lexeme: "=",
        line: 0,
    },
    Token {
        kind: Error,
        lexeme: "unterminated char literal",
        line: 0,
    },
]
