src/snapshots/bminor__lexer__test__comments.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        lexeme: "a",
        line: 1,
    },
    Token {
        kind: Equal,
        lexeme: "=",
        line: 1,
    },
    Token {
        kind: IntegerLiteral,
        lexeme: "5",
        line: 1,
    },
    Token {
        kind: Semicolon,
        lexeme: ";",
        line: 1,
    },
    Token {
        kind: EOF,
        lexeme: "",
        line: 1,
    },
]
